--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
         /* Footer logo */
         .footer-logo {
-            max-width: 80px;
+            max-width: 90px;
             height: auto;
             margin-bottom: 1rem;
             opacity: 0.9;
@@ -1266,7 +1266,7 @@
                 <!-- QR Comparte (izquierda) -->
                 <div style="text-align: center;">
                     <img src="DIACUA-VIVA-qr.png" alt="QR Página Web" style="width: 80px; height: 80px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.2);">
-                    <p style="font-size: 0.85rem; margin-top: 0.5rem; opacity: 0.8;">📲 Comparte<br>DIACUA VIVA</p>
+                    <p style="font-size: 0.85rem; margin-top: 0.5rem; opacity: 0.8;">📲 Comparte DIACUA VIVA</p>
                 </div>
                 
                 <!-- Logo Central -->
@@ -1277,7 +1277,7 @@
                 <!-- QR Regístrate (derecha) -->
                 <div style="text-align: center;">
                     <img src="diacua-viva-REGISTRATE.png" alt="QR Regístrate" style="width: 80px; height: 80px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.2);">
-                    <p style="font-size: 0.85rem; margin-top: 0.5rem; opacity: 0.8;">🙋 Únete<br>ahora</p>
+                    <p style="font-size: 0.85rem; margin-top: 0.5rem; opacity: 0.8;">🙋 Únete ahora</p>
                 </div>
             </div>
             
