--- a/index.html
+++ b/index.html
@@ -874,6 +874,105 @@
             </div>
         </section>
 
+        <!-- Indicadores de Vitalidad Cultural (4 As) -->
+        <section class="fade-in">
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        <span>🌱 Indicadores de Vitalidad Cultural</span>
+                        <span class="arrow">▼</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p style="text-align: center; margin-bottom: 2rem; font-size: 1.05rem; color: #555;">
+                            Principios transversales que miden la salud cultural de Villavicencio
+                        </p>
+
+                        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; max-width: 1200px; margin: 0 auto;">
+                
+                <!-- Aceptación -->
+                <div style="background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); border-left: 5px solid #6b9b37;">
+                    <h3 style="color: var(--primary); margin-bottom: 1rem;">
+                        <span style="font-size: 2rem;">🤝</span> ACEPTACIÓN
+                    </h3>
+                    <p style="margin-bottom: 1rem; font-weight: 600; color: var(--secondary);">
+                        KPI: Índice de Porosidad Cultural
+                    </p>
+                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
+                        <strong>Qué mide:</strong> Capacidad de la ciudad para integrar diversidad cultural sin perder identidad. Mide la interacción entre grupos culturales distintos.
+                    </p>
+                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
+                        <strong>Métrica:</strong> % de habitantes que asisten a eventos culturales de tradiciones distintas a la suya.
+                    </p>
+                    <div style="background: #f0f8ff; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
+                        <p style="font-size: 0.9rem; margin: 0;">
+                            <strong>Ejemplo:</strong> En un evento de música llanera, ¿qué porcentaje de asistentes son de otras regiones o culturas urbanas?
+                        </p>
+                    </div>
+                    <div style="margin-top: 1rem; font-size: 0.85rem; color: #666;">
+                        <strong>Instrumento:</strong> Encuesta de Consumo Cultural + Análisis de asistencia por perfiles demográficos
+                    </div>
+                </div>
+
+                <!-- Actitud -->
+                <div style="background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); border-left: 5px solid #ffa726;">
+                    <h3 style="color: #d17a00; margin-bottom: 1rem;">
+                        <span style="font-size: 2rem;">⚡</span> ACTITUD
+                    </h3>
+                    <p style="margin-bottom: 1rem; font-weight: 600; color: #d17a00;">
+                        KPI: Tasa de Rebote Creativo
+                    </p>
+                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
+                        <strong>Qué mide:</strong> Capacidad de resiliencia y adaptación de la comunidad cultural ante crisis o cambios. Mide el "buen humor" como velocidad de respuesta creativa.
+                    </p>
+                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
+                        <strong>Métrica:</strong> Tiempo promedio que tarda la comunidad en proponer soluciones alternativas ante eventos disruptivos.
+                    </p>
+                    <div style="background: #fff8e1; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
+                        <p style="font-size: 0.9rem; margin: 0;">
+                            <strong>Ejemplo:</strong> Si llueve y se cancela un festival, ¿en cuánto tiempo la comunidad organiza una alternativa (espacio techado, streaming, etc.)?
+                        </p>
+                    </div>
+                    <div style="margin-top: 1rem; font-size: 0.85rem; color: #666;">
+                        <strong>Instrumento:</strong> Estudios de caso + Análisis de respuesta comunitaria ante crisis culturales
+                    </div>
+                </div>
+
+                <!-- Altruismo -->
+                <div style="background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); border-left: 5px solid #2d5016;">
+                    <h3 style="color: var(--primary); margin-bottom: 1rem;">
+                        <span style="font-size: 2rem;">💚</span> ALTRUISMO
+                    </h3>
+                    <p style="margin-bottom: 1rem; font-weight: 600; color: var(--primary);">
+                        KPI: Retorno Social de la Inversión (SROI)
+                    </p>
+                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
+                        <strong>Qué mide:</strong> Impacto real de la cultura en el bienestar social de Villavicencio. Mide si la cultura sirve para vivir mejor.
+                    </p>
+                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
+                        <strong>Métrica:</strong> Correlación entre actividad cultural y mejoras en indicadores sociales (reducción de violencia, salud mental, cohesión comunitaria).
+                    </p>
+                    <div style="background: #e8f5e9; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
+                        <p style="font-size: 0.9rem; margin: 0;">
+                            <strong>Ejemplo:</strong> ¿Bajó la violencia en el barrio donde funciona la escuela de música? ¿Mejoró la convivencia en zonas con murales comunitarios?
+                        </p>
+                    </div>
+                    <div style="margin-top: 1rem; font-size: 0.85rem; color: #666;">
+                        <strong>Instrumento:</strong> Análisis cuantitativo de impacto social + Cruce de datos culturales con indicadores de bienestar
+                    </div>
+                </div>
+
+                        </div>
+
+                        <div style="text-align: center; margin-top: 2.5rem; padding: 1.5rem; background: rgba(45,80,22,0.05); border-radius: 10px;">
+                            <p style="font-size: 1rem; color: var(--primary); margin: 0; line-height: 1.8;">
+                                <strong>💡 Principio filosófico:</strong> Estos indicadores garantizan que la cultura en Villavicencio sea <strong>inclusiva</strong> (Aceptación), <strong>resiliente</strong> (Actitud) y <strong>útil</strong> (Altruismo). No medimos solo cantidad, medimos <em>calidad humana</em>.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Roles y Agentes de Interés -->
         <section id="roles" class="fade-in">
             <h2 style="text-align: center; color: var(--primary); margin: 3rem 0 2rem;">¿Quiénes Somos? Súmate al Ecosistema</h2>
@@ -931,9 +1030,14 @@
 
         <!-- Impacto Esperado -->
         <section id="impacto" class="fade-in">
-            <h2 style="text-align: center; color: var(--primary); margin: 3rem 0 2rem;">Impacto Esperado</h2>
-            
-            <div class="cards-grid">
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        <span>📈 Impacto Esperado</span>
+                        <span class="arrow">▼</span>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="cards-grid">
                 <div class="card">
                     <div class="icon">📈</div>
                     <h3>Planificación Basada en Datos</h3>
@@ -968,6 +1072,8 @@
                     <div class="icon">🌍</div>
                     <h3>Competitividad Regional</h3>
                     <p>Posicionamiento de Villavicencio como referente cultural a nivel nacional e internacional.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
