video intro y g analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RF48DEB9J6"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-RF48DEB9J6');
+        </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DIACUA VIVA - Proyecto de investigación y gestión cultural para Villavicencio. Árbol Cultural que integra identidad, investigación y desarrollo comunitario.">
@@ -836,6 +844,15 @@
         </div>
     </div>
 
+    <!-- Video Intro con CTA -->
+    <section class="fade-in" style="max-width: 700px; margin: 2.5rem auto 0 auto; text-align: center;">
+        <h2 style="color: var(--primary); margin-bottom: 1rem; font-size: 2rem;">Conoce DIACUA VIVA en 45 segundos</h2>
+        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.12); margin-bottom: 1.5rem;">
+            <iframe src="https://www.youtube.com/embed/b8nsbrPHlrY" title="DIACUA VIVA INTRODUCCION" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 16px;"></iframe>
+        </div>
+        <a href="#proyecto" class="cta-btn" style="font-size: 1.15rem; padding: 0.9rem 2.2rem; background: var(--accent); color: white; border-radius: 30px; text-decoration: none; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.08); transition: background 0.2s;">Súmate a la comunidad</a>
+    </section>
+
     <!-- Main Container -->
     <div class="container">
         <!-- Navigation Pills -->
@@ -1283,6 +1300,40 @@
                                     "🌳 La cultura no se administra, se cultiva. DIACUA VIVA es el compromiso de sembrar raíces fuertes 
                                     para que Villavicencio florezca con identidad y creatividad."
                                 </p>
+                                <div style="margin: 2.2rem 0 0 0; text-align: center;">
+                                    <span style="display: inline-block; font-weight: 600; color: var(--primary); font-size: 1.08rem; margin-bottom: 0.5rem;">El Sembrador de Versos</span>
+                                    <blockquote style="font-size: 1rem; color: #444; background: #f7f7f7; border-left: 4px solid var(--secondary); margin: 0 auto 1.2rem auto; padding: 1.1rem 1.5rem; border-radius: 10px; max-width: 420px;">
+He estado muy feliz,<br>
+pues en este último año<br>
+he crecido... ¡más de mil!<br>
+Pero gracias a susMercedes<br>
+por cada palabra de ustedes,<br>
+con sus historias y leyendas<br>
+que mueven cien mil agendas.<br>
+Son historias invencibles,<br><br>
+por eso me paro a decirles:<br>
+<em>"Una palabra tuya<br>
+bastará para sanarme".</em><br>
+¡Esto es algo increíble!<br><br>
+Tienen el don y los capitales<br>
+de elevar mi inspiración<br>
+y tocar mi corazón<br>
+sin cantar ni una canción...<br>
+¡hasta me erizo como la Grisales!<br><br>
+Pero ojo, agradezco tu paciencia:<br>
+si me erizo no es de "diva" ni apariencia,<br>
+sino que a veces me erizo como el erizo:<br>
+puedo picar sin permiso<br>
+y aunque no hay malos hechizos,<br>
+defiendo mis versos, concisos.<br><br>
+Por tanto, infinita gratitud por tu presencia.<br>
+No busco cambiar mundos ni dar elocuencia,<br>
+tan solo quiero saludarte sin tropiezos,<br>
+como lo haría...<br>
+el sembrador de versos.
+                                    </blockquote>
+                                    <a href="#roles" class="cta-btn" style="font-size: 1.08rem; padding: 0.7rem 2rem; background: var(--accent); color: white; border-radius: 30px; text-decoration: none; font-weight: 600; margin-top: 0.5rem; display: inline-block;">Súmate al Ecosistema</a>
+                                </div>
                             </div>
                         </div>
                     </div>
