--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
                     <div class="icon">🤝</div>
                     <h3>Qué Hacemos</h3>
                     <p><strong>INTEGRAR</strong> saberes, necesidades y recursos técnicos, tecnológicos, financieros, humanos y ecoturisticos hacia la contribución de la cultura con propuestas para Villavicencio.</p>
-                </div>
+                </div> 
 
                 <div class="card">
                     <div class="icon">🌍</div>
@@ -1310,7 +1310,7 @@ Pero gracias a susMercedes<br>
 por cada palabra de ustedes,<br>
 con sus historias y leyendas<br>
 que mueven cien mil agendas.<br>
-Son historias invencibles,<br><br>
+Con historias invencibles,<br><br>
 por eso me paro a decirles:<br>
 <em>"Una palabra tuya<br>
 bastará para sanarme".</em><br>
