actividades pancoger y contrato software borrador

--- a/index.html
+++ b/index.html
@@ -1519,8 +1519,28 @@ el sembrador de versos.
         </section>
 
         <!-- Propuestas Comunitarias -->
+
         <section id="propuestas" class="fade-in">
             <h2 style="text-align: center; color: var(--primary); margin: 3rem 0 2rem;">💡 Aportes de Voluntarios</h2>
+            <div class="accordion" style="margin-bottom: 2.5rem;">
+                <div class="accordion-item">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        <h3 style="color: var(--primary); margin: 0; font-size: 1.25rem;">Actividades Pancoger: ¡Oportunidades para Acción Inmediata!</h3>
+                        <span class="arrow">▼</span>
+                    </div>
+                    <div class="accordion-content">
+                        <ul style="margin-left: 1.2rem; color: #444;">
+                            <li><strong>Ollas Comunitarias y Ancestrales:</strong> Encuentros con comida, arte, cine, música, foros y saberes, apoyados por voluntariado y patrocinio.</li>
+                            <li><strong>Gestión y Asesoría a Colectivos:</strong> Diagnóstico, consultoría y diseño para otros grupos culturales o ciudades.</li>
+                            <li><strong>Conciertos “Llaneridad al Parque”:</strong> Música, cultura y gastronomía llanera en espacios públicos.</li>
+                            <li><strong>Multas de Trabajo Comunitario:</strong> Opción de cumplir sanciones o licencias mediante voluntariado cultural (a futuro, con convenios institucionales).</li>
+                        </ul>
+                        <p style="margin-top: 1rem; color: #666; font-size: 0.98rem;">
+                            <em>¿Te interesa liderar o sumarte a alguna de estas acciones? <a href="#roles" style="color: var(--accent); font-weight: 600;">Súmate al colectivo</a> y propón tu iniciativa.</em>
+                        </p>
+                    </div>
+                </div>
+            </div>
             <p style="text-align: center; margin-bottom: 2rem; color: #666; max-width: 800px; margin-left: auto; margin-right: auto;">
                 Espacio dedicado a <strong>voluntarios, gestores culturales, artistas y agentes de interés</strong> 
                 que comparten sus proyectos para el desarrollo cultural de Villavicencio.
