expresiones comunitarias y cuarto As

--- a/index.html
+++ b/index.html
@@ -1104,102 +1104,81 @@
             </div>
         </section>
 
-        <!-- Indicadores de Vitalidad Cultural (4 As) -->
+        <!-- Indicadores de Vitalidad Cultural (4 Ases de la Cultura) -->
         <section class="fade-in">
-            <div class="accordion">
+            <h2 style="color: var(--primary); text-align: center; margin: 3rem 0 2rem;">Indicadores de Vitalidad Cultural: Los 4 Ases de la Cultura</h2>
+            <div class="accordion" style="max-width: 900px; margin: 0 auto;">
+                <!-- Aceptación -->
                 <div class="accordion-item">
                     <div class="accordion-header" onclick="toggleAccordion(this)">
-                        <span>🌱 Indicadores de Vitalidad Cultural</span>
+                        <span style="font-size: 1.3rem; color: var(--secondary);">🤝 ACEPTACIÓN</span>
                         <span class="arrow">▼</span>
                     </div>
                     <div class="accordion-content">
-                        <p style="text-align: center; margin-bottom: 2rem; font-size: 1.05rem; color: #555;">
-                            Principios transversales que miden la salud cultural de Villavicencio
-                        </p>
-
-                        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; max-width: 1200px; margin: 0 auto;">
-                
-                <!-- Aceptación -->
-                <div style="background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); border-left: 5px solid #6b9b37;">
-                    <h3 style="color: var(--primary); margin-bottom: 1rem;">
-                        <span style="font-size: 2rem;">🤝</span> ACEPTACIÓN
-                    </h3>
-                    <p style="margin-bottom: 1rem; font-weight: 600; color: var(--secondary);">
-                        KPI: Índice de Porosidad Cultural
-                    </p>
-                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
-                        <strong>Qué mide:</strong> Capacidad de la ciudad para integrar diversidad cultural sin perder identidad. Mide la interacción entre grupos culturales distintos.
-                    </p>
-                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
-                        <strong>Métrica:</strong> % de habitantes que asisten a eventos culturales de tradiciones distintas a la suya.
-                    </p>
-                    <div style="background: #f0f8ff; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
-                        <p style="font-size: 0.9rem; margin: 0;">
+                        <p style="font-weight: 600; color: var(--secondary);">KPI: Índice de Porosidad Cultural</p>
+                        <p><strong>Qué mide:</strong> Capacidad de la ciudad para integrar diversidad cultural sin perder identidad. Mide la interacción entre grupos culturales distintos.</p>
+                        <p><strong>Métrica:</strong> % de habitantes que asisten a eventos culturales de tradiciones distintas a la suya.</p>
+                        <div style="background: #f0f8ff; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
                             <strong>Ejemplo:</strong> En un evento de música llanera, ¿qué porcentaje de asistentes son de otras regiones o culturas urbanas?
-                        </p>
-                    </div>
-                    <div style="margin-top: 1rem; font-size: 0.85rem; color: #666;">
-                        <strong>Instrumento:</strong> Encuesta de Consumo Cultural + Análisis de asistencia por perfiles demográficos
+                        </div>
+                        <div style="margin-top: 1rem; font-size: 0.95rem; color: #666;">
+                            <strong>Instrumento:</strong> Encuesta de Consumo Cultural + Análisis de asistencia por perfiles demográficos
+                        </div>
                     </div>
                 </div>
-
                 <!-- Actitud -->
-                <div style="background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); border-left: 5px solid #ffa726;">
-                    <h3 style="color: #d17a00; margin-bottom: 1rem;">
-                        <span style="font-size: 2rem;">⚡</span> ACTITUD
-                    </h3>
-                    <p style="margin-bottom: 1rem; font-weight: 600; color: #d17a00;">
-                        KPI: Tasa de Rebote Creativo
-                    </p>
-                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
-                        <strong>Qué mide:</strong> Capacidad de resiliencia y adaptación de la comunidad cultural ante crisis o cambios. Mide el "buen humor" como velocidad de respuesta creativa.
-                    </p>
-                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
-                        <strong>Métrica:</strong> Tiempo promedio que tarda la comunidad en proponer soluciones alternativas ante eventos disruptivos.
-                    </p>
-                    <div style="background: #fff8e1; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
-                        <p style="font-size: 0.9rem; margin: 0;">
+                <div class="accordion-item">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        <span style="font-size: 1.3rem; color: #d17a00;">⚡ ACTITUD</span>
+                        <span class="arrow">▼</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p style="font-weight: 600; color: #d17a00;">KPI: Tasa de Rebote Creativo</p>
+                        <p><strong>Qué mide:</strong> Capacidad de resiliencia y adaptación de la comunidad cultural ante crisis o cambios. Mide el "buen humor" como velocidad de respuesta creativa.</p>
+                        <p><strong>Métrica:</strong> Tiempo promedio que tarda la comunidad en proponer soluciones alternativas ante eventos disruptivos.</p>
+                        <div style="background: #fff8e1; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
                             <strong>Ejemplo:</strong> Si llueve y se cancela un festival, ¿en cuánto tiempo la comunidad organiza una alternativa (espacio techado, streaming, etc.)?
-                        </p>
-                    </div>
-                    <div style="margin-top: 1rem; font-size: 0.85rem; color: #666;">
-                        <strong>Instrumento:</strong> Estudios de caso + Análisis de respuesta comunitaria ante crisis culturales
+                        </div>
+                        <div style="margin-top: 1rem; font-size: 0.95rem; color: #666;">
+                            <strong>Instrumento:</strong> Estudios de caso + Análisis de respuesta comunitaria ante crisis culturales
+                        </div>
                     </div>
                 </div>
-
                 <!-- Altruismo -->
-                <div style="background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); border-left: 5px solid #2d5016;">
-                    <h3 style="color: var(--primary); margin-bottom: 1rem;">
-                        <span style="font-size: 2rem;">💚</span> ALTRUISMO
-                    </h3>
-                    <p style="margin-bottom: 1rem; font-weight: 600; color: var(--primary);">
-                        KPI: Retorno Social de la Inversión (SROI)
-                    </p>
-                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
-                        <strong>Qué mide:</strong> Impacto real de la cultura en el bienestar social de Villavicencio. Mide si la cultura sirve para vivir mejor.
-                    </p>
-                    <p style="margin-bottom: 1rem; font-size: 0.95rem; line-height: 1.6;">
-                        <strong>Métrica:</strong> Correlación entre actividad cultural y mejoras en indicadores sociales (reducción de violencia, salud mental, cohesión comunitaria).
-                    </p>
-                    <div style="background: #e8f5e9; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
-                        <p style="font-size: 0.9rem; margin: 0;">
+                <div class="accordion-item">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        <span style="font-size: 1.3rem; color: var(--primary);">💚 ALTRUISMO</span>
+                        <span class="arrow">▼</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p style="font-weight: 600; color: var(--primary);">KPI: Retorno Social de la Inversión (SROI)</p>
+                        <p><strong>Qué mide:</strong> Impacto real de la cultura en el bienestar social de Villavicencio. Mide si la cultura sirve para vivir mejor.</p>
+                        <p><strong>Métrica:</strong> Correlación entre actividad cultural y mejoras en indicadores sociales (reducción de violencia, salud mental, cohesión comunitaria).</p>
+                        <div style="background: #e8f5e9; padding: 1rem; border-radius: 8px; margin-top: 1rem;">
                             <strong>Ejemplo:</strong> ¿Bajó la violencia en el barrio donde funciona la escuela de música? ¿Mejoró la convivencia en zonas con murales comunitarios?
-                        </p>
-                    </div>
-                    <div style="margin-top: 1rem; font-size: 0.85rem; color: #666;">
-                        <strong>Instrumento:</strong> Análisis cuantitativo de impacto social + Cruce de datos culturales con indicadores de bienestar
-                    </div>
-                </div>
-
                         </div>
-
-                        <div style="text-align: center; margin-top: 2.5rem; padding: 1.5rem; background: rgba(45,80,22,0.05); border-radius: 10px;">
-                            <p style="font-size: 1rem; color: var(--primary); margin: 0; line-height: 1.8;">
-                                <strong>💡 Principio filosófico:</strong> Estos indicadores garantizan que la cultura en Villavicencio sea <strong>inclusiva</strong> (Aceptación), <strong>resiliente</strong> (Actitud) y <strong>útil</strong> (Altruismo). No medimos solo cantidad, medimos <em>calidad humana</em>.
-                            </p>
+                        <div style="margin-top: 1rem; font-size: 0.95rem; color: #666;">
+                            <strong>Instrumento:</strong> Análisis cuantitativo de impacto social + Cruce de datos culturales con indicadores de bienestar
                         </div>
                     </div>
                 </div>
+                <!-- Autenticidad -->
+                <div class="accordion-item">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        <span style="font-size: 1.3rem; color: #8d4b1c;">🌟 AUTENTICIDAD</span>
+                        <span class="arrow">▼</span>
+                    </div>
+                    <div class="accordion-content" style="text-align: center;">
+                        <p style="font-size: 1.1rem; color: #8d4b1c; margin-bottom: 2rem;">La Autenticidad no cabe en un servidor.<br>Esta web es nuestro mapa, pero la fiesta está en la plaza.</p>
+                        <a href="https://facebook.com/diacuaviva" target="_blank" style="display: inline-block; background: #4267B2; color: white; font-weight: 600; padding: 0.8rem 2rem; border-radius: 30px; text-decoration: none; font-size: 1.08rem; margin-bottom: 1.2rem;">Únete a la Conversación Viva en Facebook</a>
+                        <p style="margin-top: 1.2rem; color: #666; font-size: 0.98rem; font-style: italic;">(Donde hasta la Chilindrina se vuelve Centauro indomable)</p>
+                    </div>
+                </div>
+            </div>
+            <div style="text-align: center; margin-top: 2.5rem; padding: 1.5rem; background: rgba(45,80,22,0.05); border-radius: 10px;">
+                <p style="font-size: 1rem; color: var(--primary); margin: 0; line-height: 1.8;">
+                    <strong>💡 Principio filosófico:</strong> Estos indicadores garantizan que la cultura en Villavicencio sea <strong>inclusiva</strong> (Aceptación), <strong>resiliente</strong> (Actitud), <strong>útil</strong> (Altruismo) y <strong>viva</strong> (Autenticidad). No medimos solo cantidad, medimos <em>calidad humana</em>.
+                </p>
             </div>
         </section>
 
@@ -1521,7 +1500,7 @@ el sembrador de versos.
         <!-- Propuestas Comunitarias -->
 
         <section id="propuestas" class="fade-in">
-            <h2 style="text-align: center; color: var(--primary); margin: 3rem 0 2rem;">💡 Aportes de Voluntarios</h2>
+            <h2 style="text-align: center; color: var(--primary); margin: 3rem 0 2rem;">💡 Expresiones Comunitarias</h2>
             <div class="accordion" style="margin-bottom: 2.5rem;">
                 <div class="accordion-item">
                     <div class="accordion-header" onclick="toggleAccordion(this)">
@@ -1548,9 +1527,9 @@ el sembrador de versos.
 
             <!-- Botón Publicar Propuesta -->
             <div style="text-align: center; margin: 2rem 0;">
-                <button class="submit-proposal-btn" onclick="showProposalForm()">
+                <a href="https://forms.gle/ic5X5utkoT1XatWi8" target="_blank" rel="noopener noreferrer" class="submit-proposal-btn" style="display: inline-block; text-decoration: none;">
                     📝 Publicar Mi Propuesta
-                </button>
+                </a>
             </div>
 
             <!-- Filtros -->
