--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
                     </div>
                     <div class="accordion-content" style="text-align: center;">
                         <p style="font-size: 1.1rem; color: #8d4b1c; margin-bottom: 2rem;">La Autenticidad no cabe en un servidor.<br>Esta web es nuestro mapa, pero la fiesta está en la plaza.</p>
-                        <a href="https://facebook.com/diacuaviva" target="_blank" style="display: inline-block; background: #4267B2; color: white; font-weight: 600; padding: 0.8rem 2rem; border-radius: 30px; text-decoration: none; font-size: 1.08rem; margin-bottom: 1.2rem;">Únete a la Conversación Viva en Facebook</a>
+                        <a href="https://www.facebook.com/share/g/19Tbo3z61s/" target="_blank" style="display: inline-block; background: #4267B2; color: white; font-weight: 600; padding: 0.8rem 2rem; border-radius: 30px; text-decoration: none; font-size: 1.08rem; margin-bottom: 1.2rem;">Únete a la Conversación Viva en Facebook</a>
                         <p style="margin-top: 1.2rem; color: #666; font-size: 0.98rem; font-style: italic;">(Donde hasta la Chilindrina se vuelve Centauro indomable)</p>
                     </div>
                 </div>
