espacio comunitario apertura web expresion comun

--- a/index.html
+++ b/index.html
@@ -1521,14 +1521,13 @@ el sembrador de versos.
                 </div>
             </div>
             <p style="text-align: center; margin-bottom: 2rem; color: #666; max-width: 800px; margin-left: auto; margin-right: auto;">
-                Espacio dedicado a <strong>voluntarios, gestores culturales, artistas y agentes de interés</strong> 
-                que comparten sus proyectos para el desarrollo cultural de Villavicencio.
+                Este es tu espacio. Comparte tu arte, tu historia o tu iniciativa para que crezca el Árbol Cultural de Villavicencio.
             </p>
 
             <!-- Botón Publicar Propuesta -->
             <div style="text-align: center; margin: 2rem 0;">
                 <a href="https://forms.gle/ic5X5utkoT1XatWi8" target="_blank" rel="noopener noreferrer" class="submit-proposal-btn" style="display: inline-block; text-decoration: none;">
-                    📝 Publicar Mi Propuesta
+                    📝 Sube tu expresión
                 </a>
             </div>
 
