de patrocinador a inversor link web auxiliar

--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@
 
                 <div class="role-card" onclick="showRoleModal('patrocinador')">
                     <div class="role-icon">💼</div>
-                    <h4>Patrocinador</h4>
+                    <h4>Patrocinador / Inversión Estratégica</h4>
                     <p>Empresas, banca, Estado</p>
                 </div>
 
@@ -1951,6 +1951,7 @@ el sembrador de versos.
                             <li><strong>Bronce:</strong> Apoyo logístico</li>
                         </ul>
                         <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('patrocinador')">Quiero patrocinar</button>
+                        <a href="https://diacua-viva-y2orhdn.gamma.site/" target="_blank" rel="noopener noreferrer" class="cta-btn" style="margin-top: 0.7rem; background: #2d5016; color: #fff; display: inline-block; text-align: center; text-decoration: none; font-size: 1rem; font-weight: 600; border-radius: 30px; padding: 0.7rem 1.7rem;">Conoce nuestro modelo de inversión</a>
                     `
                 },
                 'aliado': {
