poema completo sembrador de versos con scroll interno

--- a/index.html
+++ b/index.html
@@ -1280,38 +1280,78 @@
                                     para que Villavicencio florezca con identidad y creatividad."
                                 </p>
                                 <div style="margin: 2.2rem 0 0 0; text-align: center;">
-                                    <span style="display: inline-block; font-weight: 600; color: var(--primary); font-size: 1.08rem; margin-bottom: 0.5rem;">El Sembrador de Versos</span>
-                                    <blockquote style="font-size: 1rem; color: #444; background: #f7f7f7; border-left: 4px solid var(--secondary); margin: 0 auto 1.2rem auto; padding: 1.1rem 1.5rem; border-radius: 10px; max-width: 420px;">
-He estado muy feliz,<br>
-pues en este último año<br>
-he crecido... ¡más de mil!<br>
-Pero gracias a susMercedes<br>
-por cada palabra de ustedes,<br>
-con sus historias y leyendas<br>
-que mueven cien mil agendas.<br>
-Con historias invencibles,<br><br>
-por eso me paro a decirles:<br>
-<em>"Una palabra tuya<br>
-bastará para sanarme".</em><br>
-¡Esto es algo increíble!<br><br>
-Tienen el don y los capitales<br>
-de elevar mi inspiración<br>
-y tocar mi corazón<br>
-sin cantar ni una canción...<br>
-¡hasta me erizo como la Grisales!<br><br>
-Pero ojo, agradezco tu paciencia:<br>
-si me erizo no es de "diva" ni apariencia,<br>
-sino que a veces me erizo como el erizo:<br>
-puedo picar sin permiso<br>
-y aunque no hay malos hechizos,<br>
-defiendo mis versos, concisos.<br><br>
-Por tanto, infinita gratitud por tu presencia.<br>
-No busco cambiar mundos ni dar elocuencia,<br>
-tan solo quiero saludarte sin tropiezos,<br>
-como lo haría...<br>
-el sembrador de versos.
-                                    </blockquote>
-                                    <a href="#roles" class="cta-btn" style="font-size: 1.08rem; padding: 0.7rem 2rem; background: var(--accent); color: white; border-radius: 30px; text-decoration: none; font-weight: 600; margin-top: 0.5rem; display: inline-block;">Súmate al Ecosistema</a>
+                                                                        <div id="poem-container" style="font-size: 1rem; color: #444; background: #f7f7f7; border-left: 4px solid var(--secondary); margin: 0 auto 1.2rem auto; padding: 1.1rem 1.5rem; border-radius: 10px; max-width: 420px; text-align: left; font-style: italic;">
+                                                                            <div id="poem-snippet">
+                                                                                He estado muy feliz,<br>
+                                                                                pues en este último año<br>
+                                                                                he crecido... ¡más de mil!<br>
+                                                                                Pero gracias a susMercedes<br>
+                                                                                por cada palabra de ustedes,<br>
+                                                                                con sus historias y leyendas<br>
+                                                                                que mueven cien mil agendas.<br>
+                                                                                Con historias invencibles...
+                                                                            </div>
+                                                                            <div id="poem-full" style="display: none; max-height: 40vh; overflow-y: auto; padding-right: 1rem;">
+                                                                                He estado muy feliz,<br>
+                                                                                pues en este último año<br>
+                                                                                he crecido... ¡más de mil!<br>
+                                                                                Pero gracias a susMercedes<br>
+                                                                                por cada palabra de ustedes,<br>
+                                                                                con sus historias y leyendas<br>
+                                                                                que mueven cien mil agendas.<br>
+                                                                                Con historias invencibles,<br><br>
+                                                                                por eso me paro a decirles:<br>
+                                                                                <em>"Una palabra tuya<br>
+                                                                                bastará para sanarme".</em><br>
+                                                                                ¡Esto es algo increíble!<br><br>
+                                                                                Tienen el don y los capitales<br>
+                                                                                de elevar mi inspiración<br>
+                                                                                y tocar mi corazón<br>
+                                                                                sin cantar ni una canción...<br>
+                                                                                ¡hasta me erizo como la Grisales!<br><br>
+                                                                                Pero ojo, agradezco tu paciencia:<br>
+                                                                                si me erizo no es de "diva" ni apariencia,<br>
+                                                                                sino que a veces me erizo como el erizo:<br>
+                                                                                puedo pensar sin pedir permiso<br>
+                                                                                No es un incomodar postizo,<br>
+                                                                                Tan solo exorcizo hechizos <br>
+                                                                                Que nos ayude a pensar Conciso <br>
+                                                                                Y salgamos ya del Pailon  <br>
+                                                                                que nos saca del quicio <br><br>
+
+                                                                                Mejor, ver lo que Euclides quiso <br>
+                                                                                Al Explicar su paradoja ¿qué dijo? <br>
+                                                                                Averíagulo tu mismo, y no pierdas prestigio <br>
+                                                                                que el genio de la geometría <br>
+                                                                                me mostró sus artimañas  y poesias <br>
+                                                                                para entender sus enigmas <br>
+                                                                                y salir del abismo <br>
+                                                                                de los dogmas y los prejuicios <br>
+                                                                                que nos tienen en vicio<br>
+                                                                                de pensar sin juicio <br>
+                                                                                y vivir sin beneficio<br>
+                                                                                de la cultura y los versos <br>
+                                                                                que nos hacen libres y diversos<br>
+                                                                                como los rios y los cerros<br>
+                                                                                que adornan nuestros suelos.<br><br>
+
+                                                                                Por eso, gracias por tus palabras.<br>
+                                                                                Me inspiran más que las alboradas<br>
+                                                                                y me llenan de energía<br>para seguir sembrando versos.<br><br>
+                                                                                Pero no fue rogando ni pidiendo permiso <br>
+                                                                                Y dudo mucho que haya sido preciso <br>
+                                                                                Ni que haya alguien que ose haberlo dicho:<br>
+                                                                                que así no fue como Dios nos hizo <br><br>
+                                                                                Por tanto, infinita gratitud por tu presencia.<br>
+                                                                                No busco cambiar mil mundos ni dar elocuencias,<br>
+                                                                                tan solo quiero saludarte sin tropiezos,<br>
+                                                                                como lo haría...<br>
+                                                                                este sembrador de versos.
+                                                                            </div>
+                                                                        </div>
+                                                                        <button id="toggle-poem-btn" onclick="togglePoem()" class="cta-btn" style="font-size: 1.08rem; padding: 0.7rem 2rem; background: #2d5016; color: white; border-radius: 30px; text-decoration: none; font-weight: 600; margin-top: 0.5rem; display: inline-block; border: none; cursor: pointer;">Leer el poema completo</button>
+                                                                        <a href="#roles" class="cta-btn" style="font-size: 1.08rem; padding: 0.7rem 2rem; background: var(--accent); color: white; border-radius: 30px; text-decoration: none; font-weight: 600; margin-top: 0.5rem; display: inline-block;">Súmate al Ecosistema</a>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -1836,6 +1876,23 @@ el sembrador de versos.
             // Open clicked item if it wasn't active
             if (!isActive) {
                 item.classList.add('active');
+            }
+        }
+
+        // Poem toggle functionality
+        function togglePoem() {
+            const snippet = document.getElementById('poem-snippet');
+            const full = document.getElementById('poem-full');
+            const btn = document.getElementById('toggle-poem-btn');
+
+            if (full.style.display === 'none') {
+                snippet.style.display = 'none';
+                full.style.display = 'block';
+                btn.textContent = 'Mostrar menos';
+            } else {
+                snippet.style.display = 'block';
+                full.style.display = 'none';
+                btn.textContent = 'Leer el poema completo';
             }
         }
 
