investigador actualizado as

--- a/index.html
+++ b/index.html
@@ -1936,19 +1936,7 @@
                 'investigador': {
                     title: '🔬 Investigador/a',
                     content: `
-                        <h3>Áreas de investigación:</h3>
-                        <ul>
-                            <li>Etnografía cultural</li>
-                            <li>Análisis sociológico</li>
-                            <li>Estadística aplicada</li>
-                            <li>Cartografía social</li>
-                        </ul>
-                        <h3>Perfil requerido:</h3>
-                        <ul>
-                            <li>Formación en Ciencias Sociales, Antropología o afines</li>
-                            <li>Experiencia en metodologías mixtas</li>
-                            <li>Manejo de herramientas de análisis de datos</li>
-                        </ul>
+                        <p>Análisis científico de vanguardia. Te invitamos a poner a prueba la Paradoja Euclidiana: Demuestra cómo los Principios Puros (4 As) sostienen la realidad econométrica (NIA, BFR, TCC) de la <a href="#metodologia" onclick="closeModal()">Metodología Científica Mixta</a>.</p>
                         <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('investigador')">Unirme al equipo</button>
                     `
                 },
